Revert "Updates to add in the hover states on good and food"
This reverts commit 9803d9f54eb9e27f7f3e9c9e3e0ee18881b098b6.

--- a/styles.css
+++ b/styles.css
@@ -17,12 +17,10 @@
   color: #FFFFFF;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
 }
 
 body {
   background-color: #0F241A;
-  padding: 48px;
 }
 
 h1 {
@@ -41,6 +39,10 @@ p, a {
   line-height: 32px;
 }
 
+nav {
+  padding: 48px;
+}
+
 .logo {
   font-weight: 600;
   line-height: 24px;
@@ -51,18 +53,5 @@ p, a {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  padding: 48px 0;
+  padding: 0 48px;
 }
-
-h1 a{
-  text-decoration: none;
-  font-size: 10vw;
-  font-weight: 600;
-  cursor: pointer;
-}
-
-h1 a:hover {
-  text-decoration: line-through;
-  text-decoration-color: #FFB31A;
-}
-
