--- a/styles.css
+++ b/styles.css
@@ -1,50 +1,74 @@
 @font-face {
-  font-family: Archia;
-  font-weight: 400;
+  font-family: 'Archia';
+  font-weight: 300;
   font-display: swap;
-  src: url(./fonts/Archia-Regular.otf);
+  src: url(./fonts/Archia-Light.otf);
 }
 
 @font-face {
-  font-family: Archia;
-  font-weight: 600;
+  font-family: 'Addington CF';
+  font-weight: 300;
   font-display: swap;
-  src: url(./fonts/Archia-SemiBold.otf);
+  src: url(./fonts/AddingtonCF-Light.otf);
+}
+
+@font-face {
+  font-family: 'Addington CF';
+  font-weight: 500;
+  font-display: swap;
+  src: url(./fonts/AddingtonCF-Medium.otf);
 }
 
 * {
-  font-family: 'Archia', monospace;
-  color: #FFFFFF;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #003870;
 }
 
 body {
-  background-color: #0F241A;
+  background-color: #FFECE0;
+  padding: 80px;
 }
 
 h1 {
-  font-weight: 600;
+  font-family: 'Addington CF', serif;
+  font-weight: 300;
   font-size: 10vw;
-  color: #FFFFFF;
-  line-height: 1.2;
+  line-height: 1;
   max-width: 50vw;
-  margin-bottom: 16px;
+  margin-bottom: 80px;
+}
+
+h2 {
+  font-family: 'Addington CF', serif;
+  font-weight: 300;
+  font-size: 5vw;
+  line-height: 1;
+  max-width: 50vw;
+  margin-bottom: 80px;
+}
+
+h3, .coming-soon a {
+  font-family: 'Archia', monospace;
+  font-weight: 300;
+  font-size: 2.5vw;
+  line-height: 1.4;
+  max-width: 40vw;
+}
+
+.hero h3, .coming-soon a {
+  margin-left: 40px;
 }
 
 p, a {
-  font-weight: 400;
-  font-size: 20px;
-  color: #FFFFFF;
+  font-weight: 300;
+  font-size: 24px;
   line-height: 32px;
 }
 
-nav {
-  padding: 48px;
-}
-
 .logo {
-  font-weight: 600;
+  font-family: 'Addington CF', serif;
+  font-weight: 500;
   line-height: 24px;
   text-decoration: none;
 }
@@ -53,5 +77,43 @@ nav {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  padding: 0 48px;
+  margin: 160px 0;
+}
+
+.post img {
+  max-width: 100%;
+}
+
+.coming-soon {
+  display: flex;
+  flex-direction: column;
+  margin: 160px 0;
+}
+
+.coming-soon a {
+  margin-bottom: 24px;
+}
+
+@media only screen and (max-width: 768px) {
+
+  body {
+    padding: 20px;
+  }
+
+  h1, h2, h3, .coming-soon a {
+    max-width: 100%;
+  }
+
+  h1 {
+    font-size: 20vw;;
+  }
+
+  h2 {
+    font-size: 10vw;;
+  }
+
+  h3, .coming-soon a {
+    font-size: 5vw;
+  }
+
 }
