--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,33 @@ section {
   margin-bottom: 160px;
 }
 
+.work {
+  background: #fff;
+}
+
+.work section {
+  margin-bottom: 80px;
+}
+
+.dual-post {
+  position: relative;
+  height: auto;
+}
+
+.dual-post img:first-child{
+  width: 62.5%;
+  margin-bottom: 160px;
+}
+
+.dual-post img:nth-child(2){
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 48%;
+  z-index: 10;
+}
+
+
 @media only screen and (max-width: 768px) {
 
   body {
@@ -132,12 +159,16 @@ section {
     font-size: 5vw;
   }
 
-  nav {
+  nav, .dual-post img:first-child {
     margin-bottom: 40px;
   }
 
   section {
     margin: 80px 0;
+  }
+
+  .email {
+    margin: 2px 0 1px;
   }
 
 }
