--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ h2 {
   margin-bottom: 80px;
 }
 
-h3, .coming-soon a {
+h3, .coming-soon a, h3 a {
   font-family: 'Archia', monospace;
   font-weight: 300;
   font-size: 2.5vw;
