--- a/styles.css
+++ b/styles.css
@@ -6,169 +6,101 @@
 }
 
 @font-face {
-  font-family: 'Addington CF';
-  font-weight: 300;
+  font-family: 'Archia';
+  font-weight: 700;
   font-display: swap;
-  src: url(./fonts/AddingtonCF-Light.otf);
+  src: url(./fonts/Archia-Bold.otf);
 }
 
-@font-face {
-  font-family: 'Addington CF';
-  font-weight: 500;
-  font-display: swap;
-  src: url(./fonts/AddingtonCF-Medium.otf);
-}
 
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #003870;
+  color: #fff;
 }
 
 body {
-  background-color: #FFECE0;
+  background-color: #000;
   padding: 80px;
 }
 
 h1 {
-  font-family: 'Addington CF', serif;
-  font-weight: 300;
-  font-size: 10vw;
-  line-height: 1;
-  max-width: 50vw;
-  margin-bottom: 80px;
-}
-
-h2 {
-  font-family: 'Addington CF', serif;
+  font-family: 'Archia';
   font-weight: 300;
   font-size: 5vw;
-  line-height: 1;
-  max-width: 50vw;
-  margin-bottom: 80px;
-}
-
-h3, .coming-soon a, h3 a {
-  font-family: 'Archia', monospace;
-  font-weight: 300;
-  font-size: 2.5vw;
   line-height: 1.4;
-  max-width: 40vw;
-}
-
-.hero h3, .coming-soon a {
-  margin-left: 40px;
-}
-
-p, a {
-  font-weight: 300;
-  font-size: 24px;
-  line-height: 32px;
-}
-
-.logo {
-  font-family: 'Addington CF', serif;
-  font-weight: 500;
-  line-height: 24px;
-  text-decoration: none;
-}
-
-.email {
-  font-family: 'Archia', monospace;
-  margin: 7px 0 1px;
-  font-size: 20px;
-  color: #003870;
-  line-height: 24px;
-  float: right;
-  text-decoration: none;
-}
-
-.hero {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-}
-
-.post img {
   max-width: 100%;
+  margin-bottom: 40px;
 }
 
-.coming-soon {
-  display: flex;
-  flex-direction: column;
-}
-
-.coming-soon a {
-  margin-bottom: 24px;
-}
-
-nav {
-  margin-bottom: 80px;
+a {
+  font-size: inherit;
 }
 
 section {
-  margin-bottom: 160px;
+  padding: 80px 0;
 }
 
-.work {
-  background: #fff;
+img {
+  max-width: 100%;
 }
 
-.work section {
+/* Nav */
+
+nav {
+  display: flex;
+  justify-content: space-between;
   margin-bottom: 80px;
 }
 
-.dual-post {
-  position: relative;
-  height: auto;
-}
-
-.dual-post img:first-child{
-  width: 62.5%;
-  margin-bottom: 160px;
-}
-
-.dual-post img:nth-child(2){
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 48%;
-  z-index: 10;
+.logo {
+  font-family: 'Archia';
+  font-weight: 700;
+  font-size: 24px;
+  letter-spacing: 4px;
+  text-align: right;
+  text-transform: uppercase;
+  line-height: 32px;
+  text-decoration: none;
 }
 
 
-@media only screen and (max-width: 768px) {
+/* Homepage */
 
-  body {
-    padding: 20px;
-  }
+.project-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  gap: 0px 80px;
+  grid-template-areas: ". Right" ". Right" "Left Right" "Left Right" "Left ." "Left .";
+}
 
-  h1, h2, h3, .coming-soon a {
-    max-width: 100%;
-  }
+.right {
+  grid-area: Right;
+}
 
-  h1 {
-    font-size: 20vw;;
-  }
+.left {
+  grid-area: Left;
+}
 
-  h2 {
-    font-size: 10vw;;
-  }
+.project-display {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 
-  h3, .coming-soon a {
-    font-size: 5vw;
-  }
+.project-display>a{
+  flex: 0 calc(50% - 40px);
+}
 
-  nav, .dual-post img:first-child {
-    margin-bottom: 40px;
-  }
+.project-thumbnail {
+  margin-bottom: 80px;
+}
 
-  section {
-    margin: 80px 0;
-  }
+.project-thumbnail:first-child {
+  visibility: hidden;
+}
 
-  .email {
-    margin: 2px 0 1px;
-  }
-
+.project-thumbnail:nth-child(2n+1) {
+  margin-top: calc(-0.75 * (50% - 40px));
 }
