--- a/styles.css
+++ b/styles.css
@@ -89,12 +89,11 @@ nav {
   justify-content: space-between;
 }
 
-.project-display>a{
-  flex: 0 calc(50% - 40px);
-}
-
 .project-thumbnail {
+  position: relative;
+  flex: 0 calc(50% - 40px);
   margin-bottom: 80px;
+  height: calc(0.75 * (50% - 40px));
 }
 
 .project-thumbnail:first-child {
@@ -103,4 +102,29 @@ nav {
 
 .project-thumbnail:nth-child(2n+1) {
   margin-top: calc(-0.75 * (50% - 40px));
+}
+
+.project-thumbnail-background {
+
+}
+
+.project-thumbnail-logo {
+  max-width: 320px;
+}
+
+.project-thumbnail .overlay {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.75);
+  opacity: 1;
+  transition: all 0.2s ease;
+}
+
+.project-thumbnail:hover .overlay {
+  opacity: 0;
+  transition: all 0.2s ease;
 }
