Added Photography + Coders of Colour work

--- a/styles.css
+++ b/styles.css
@@ -202,17 +202,32 @@ p + img, img + p {
   max-height: 80px;
 }
 
-.littleuns-logo, .talking-sumac-logo {
+.littleuns-logo, .talking-sumac-logo, .coders-of-colour-logo {
   margin-top: 160px;
 }
 
-.littleuns-logo + .caption, .talking-sumac-logo + .caption {
+.littleuns-logo + .caption, .talking-sumac-logo + .caption, .coders-of-colour-logo +.caption {
   margin-bottom: 160px;
 }
 
 .talking-sumac-logo {
-  margin-top: 160px;
   max-height: 90px;
+}
+
+.coders-of-colour-logo {
+  max-height: 200px;
+}
+
+.coders-of-colour-old-logo {
+  max-width: 400px;
+}
+
+.food img {
+  margin: 80px 0;
+}
+
+.food img:last-child {
+  margin-bottom: 0;
 }
 
 /* MEDIA QUERIES */
@@ -270,6 +285,10 @@ p + img, img + p {
 
   .next-project {
     margin: 80px 0;
+  }
+
+  .food img {
+    margin-top: 80px;
   }
 
 }
