--- a/fare_new/styles.css
+++ b/fare_new/styles.css
@@ -31,18 +31,24 @@ body {
   margin: 80px auto;
 }
 
-h1, a.large {
-  font-size: clamp(40px, 5vw, 96px);
+h1 {
+  font-size: clamp(48px, 4.4vw, 96px);
+  line-height: 1.4;
+  margin: 40px 0;
+}
+
+h2, a.large {
+  font-size: clamp(40px, 3.2vw, 72px);
   line-height: 1.4;
 }
 
 h3 {
-  font-size: clamp(32px, 3vw, 56px);
+  font-size: clamp(32px, 2.4vw, 56px);
   line-height: 1.4;
 }
 
 p {
-  font-size: clamp(24px, 2vw, 32px);
+  font-size: clamp(24px, 1.6vw, 32px);
   line-height: 1.4;
 }
 
@@ -87,14 +93,14 @@ nav .links a:hover {
 }
 
 .underline {
-  background: left bottom / 4vw url(./img/underline_wobble_dark.svg);
-  padding-bottom: 2vw;
+  background: 0 bottom / 3.2vw url(./img/underline_wobble_dark.svg);
+  padding-bottom: 1.6vw;
   background-repeat-y: no-repeat;
   transition: all 0.2s ease;
 }
 
 .underline:hover {
-  background: 0 bottom / 4vw url(./img/underline_wobble.svg);
+  background: 0 bottom / 3.2vw url(./img/underline_wobble.svg);
   background-repeat-y: no-repeat;
   color: #0015FF;
   animation: animatedUnderline 4s linear infinite;
@@ -106,8 +112,8 @@ nav .links a:hover {
 	to { background-position: -100% bottom; }
 }
 
-h1 + a.large {
-  margin-top: min(8vw, 80px);
+h2 + a.large {
+  margin-top: min(6vw, 64px);
   display: inline-block;
 }
 
@@ -158,6 +164,10 @@ h1 + a.large {
 
 .the-pass-hp {
   background: center / cover fixed url(./img/homepage/the_pass.jpg);
+}
+
+.coders-hp {
+  background: center / cover fixed url(./img/homepage/coders.jpg);
 }
 
 /* MEDIA QUERIES */
