--- a/fare_new/styles.css
+++ b/fare_new/styles.css
@@ -84,7 +84,7 @@ nav .links a {
 }
 
 nav .links a:hover {
-  background: left 0 bottom 2px / 1.6vw url(./img/underline_wobble.svg);
+  background: left 0 bottom 2px / 1.2ch url(./img/underline_wobble.svg);
   background-repeat-y: no-repeat;
   color: #0015FF;
   animation: animatedUnderline 4s linear infinite;
@@ -105,6 +105,7 @@ nav .links a:hover {
   transition: all 0.2s ease;
   animation: animatedUnderline 4s linear infinite;
 }
+
 
 @keyframes animatedUnderline {
 	from { background-position: left 0 bottom 2px; }
@@ -132,6 +133,7 @@ h2 + a.large {
 
 .hp-project {
   margin: 80px 0;
+  cursor: pointer;
 }
 
 .project-hero {
