--- a/fare_new/styles.css
+++ b/fare_new/styles.css
@@ -32,13 +32,13 @@ body {
 }
 
 h1 {
-  font-size: clamp(48px, 4.4vw, 96px);
+  font-size: clamp(40px, 4.4vw, 96px);
   line-height: 1.4;
   margin: 40px 0;
 }
 
 h2, a.large, p.large {
-  font-size: clamp(32px, 3.2vw, 72px);
+  font-size: clamp(24px, 3.2vw, 72px);
   line-height: 1.4;
 }
 
@@ -170,6 +170,14 @@ h2 + a.large {
 /* MEDIA QUERIES */
 
 @media only screen and (max-width: 640px) {
+
+  body, section {
+    margin: 40px auto;
+  }
+
+  h1 {
+    margin: 0;
+  }
 
   .project-image {
     height: 50vh;
