--- a/fare_new/styles.css
+++ b/fare_new/styles.css
@@ -67,7 +67,7 @@ section {
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 0.25ch;
-  font-size: clamp(16px, 2vw, 32px);
+  font-size: clamp(20px, 2vw, 32px);
 }
 
 nav, nav .links{
@@ -77,8 +77,8 @@ nav, nav .links{
 }
 
 nav .links a {
-  margin-left: 2vw;
-  font-size: clamp(16px, 1.6vw, 24px);
+  margin-left: 2.4ch;
+  font-size: clamp(20px, 1.6vw, 24px);
   padding-bottom: 1.2vw;
   margin-bottom: -1.2vw;
 }
@@ -104,6 +104,16 @@ nav .links a:hover {
   color: #0015FF;
   transition: all 0.2s ease;
   animation: animatedUnderline 4s linear infinite;
+}
+
+nav.white .logo, nav.white .links a {
+  color: #FFFFFF;
+}
+
+nav.white .links a:hover {
+  background: left 0 bottom 2px / 1.2ch url(./img/underline_wobble_white.svg);
+  background-repeat-y: no-repeat;
+  color: #FFFFFF;
 }
 
 
