--- a/tembo-blog/styles.css
+++ b/tembo-blog/styles.css
@@ -61,6 +61,7 @@ p {
 
 p.bold {
   font-weight: 600;
+  color: #13123A;
 }
 
 p+p {
@@ -68,15 +69,92 @@ p+p {
 }
 
 .button {
-  background: #6260CE;
   border-radius: 8px;
   padding: 16px 24px;
-  min-width: 80px;
-  color: #ffffff;
+  min-width: 112px;
   display: inline-block;
   text-align: center;
   text-decoration: none;
+  font-weight: 600;
+  width: fit-content;
 }
+
+.button.primary {
+  background: #6260CE;
+  color: #ffffff;
+}
+
+.button.read {
+  border: 2px solid #D0CFE8;
+  color: #5C5C70;
+}
+
+.breadcrumb {
+  display: flex;
+  max-width: 720px;
+  margin: 0 auto 24px;
+}
+
+.breadcrumb a {
+  font-size: 12px;
+  color: #13123A;
+  letter-spacing: 2px;
+  line-height: 16px;
+  font-weight: 600;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.breadcrumb a + a:before {
+  content: url('./assets/arrow_right.svg');
+  margin: 0 12px;
+}
+
+/* ARTICLE INDEX */
+
+.index-page {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.index-page .intro p {
+  max-width: 560px;
+}
+
+.article-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 40px;
+}
+
+.article-mini {
+  max-width: 368px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 40px;
+}
+
+.article-mini img {
+  max-width: 100%;
+  border-radius: 4px;
+  margin-bottom: 24px;
+}
+
+.article-mini h3 {
+  margin-bottom: 8px;
+}
+
+.article-mini p {
+  margin-bottom: 24px;
+}
+
+.article-mini .button {
+  margin-top: auto;
+}
+
+/* ARTICLE */
 
 .content {
   max-width: 720px;
@@ -114,6 +192,10 @@ figure.full-width img {
   padding: 24px;
 }
 
+.situation p {
+  color: #13123A;
+}
+
 .content.cta {
   background: #FCFCF3;
   border: 2px solid #D0CFE8;
@@ -148,19 +230,19 @@ figure.full-width img {
   margin-right: 16px;
 }
 
-.borrowed {
+.savings .borrowed {
   background: #DFF4FB;
   border: 2px solid #90DEF9;
   flex: 1;
 }
 
-.competitor {
+.savings .competitor {
   background: #FEF6F0;
   border: 2px solid #FCD9C5;
   flex: 1;
 }
 
-.tembo {
+.savings .tembo {
   background: #ECECEF;
   border: 2px solid #D0CFE8;
   flex-direction: row;
@@ -169,12 +251,8 @@ figure.full-width img {
   justify-content: space-between;
 }
 
-.tembo div {
+.savings .tembo div {
   flex: 1;
-}
-
-.savings + h5 {
-  text-align: center;
 }
 
 .bottom-cta {
